# educateai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: 01_document_parsing.ipynb  02_chunking_experiments.ipynb  03_embedding_experiments.ipynb
src/educateai/api/: app.py
src/educateai/core/: __init__.py  models.py
src/educateai/ingestion/: __init__.py  chunker.py  embedder.py  parser.py  store.py
src/educateai/ui/: app.py
tests/unit/: test_chunker.py  test_parser.py
