[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "educateai"
version = "0.1.0"
description = "AI-powered curriculum content engine — turn any syllabus into flashcards, quizzes, audio lessons, and study guides."
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # UI
    "streamlit>=1.40.0",
    # AI — LLM
    "google-generativeai>=0.8.0",
    # AI — RAG
    "llama-index-core>=0.11.0",
    "llama-index-vector-stores-chroma>=0.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # Document parsing
    "pypdf2>=3.0.0",
    "pdfplumber",
    "python-docx>=1.1.0",
    # TTS
    "edge-tts>=7.0.0",
    # PDF export
    "reportlab>=4.0.0",
    "fpdf2>=2.8.0",
    # Templating
    "jinja2>=3.1.0",
    # Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Logging
    "structlog>=24.0.0",
    # Readability
    "textstat>=0.7.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "httpx>=0.27.0",    # for FastAPI test client
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/educateai"]
